--- a/.github/workflows/workflow-cypress.yml
+++ b/.github/workflows/workflow-cypress.yml
@@ -23,7 +23,7 @@ jobs:
           browser: chrome
           record: true
           group: 'UI - Chrome'
-          spec: cypress/e2e/*
+          spec: cypress/e2e/1-cadastroBug/*
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
