--- a/.github/workflows/workflow-cypress.yml
+++ b/.github/workflows/workflow-cypress.yml
@@ -5,29 +5,25 @@ on: [push]
 jobs:
 
   ui-chrome-tests:
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
+    container: cypress/browsers:node14.17.0-chrome88-ff89
+    strategy:
+      fail-fast: false
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Cypress install
+        uses: actions/checkout@v2
+      
+      - name: 'UI Tests - Chrome'
         uses: cypress-io/github-action@v4.2.0
         with:
-          runTests: false
-      # report machine parameters
-      - run: yarn cypress info
-      - run: node -p 'os.cpus()'
-      - run: yarn types
-      - run: yarn lint
-      - run: yarn test:unit:ci
-      - run: yarn build:ci
-
-      - name: Save build folder
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          if-no-files-found: error
-          path: build
+          config-file: cypress.config.js
+          install-command: yarn install
+          wait-on: ${{ secrets.BASE_URL }}
+          wait-on-timeout: 120
+          browser: chrome
+          record: true
+          group: 'UI - Chrome'
+          spec: cypress/e2e/1-cadastroBug/*
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
